shared/src/test/data/yeast/invalid-json/unquoted-keymap.jyt
BeginDocument       0,  1,  0 ''
BeginSequence       0,  1,  0 '['
BeginMapping        1,  1,  1 '{'
Error               2,  1,  2 'name'
Indicator           6,  1,  6 ':'
WhiteSpace          7,  1,  7 ' '
Error               8,  1,  8 ''otherApplication1''
Indicator          27,  1, 27 ','
WhiteSpace         28,  1, 28 ' '
Error              29,  1, 29 'domain'
Indicator          35,  1, 35 ':'
WhiteSpace         36,  1, 36 ' '
Error              37,  1, 37 ''myDomain2''
Indicator          48,  1, 48 ','
WhiteSpace         49,  1, 49 ' '
Error              50,  1, 50 'state'
Indicator          55,  1, 55 ':'
WhiteSpace         56,  1, 56 ' '
Error              57,  1, 57 ''CREATED''
EndMapping         66,  1, 66 '}'
Indicator          67,  1, 67 ','
LineBreak          68,  1, 68 '\n'
WhiteSpace         69,  2,  0 '  '
BeginMapping       71,  2,  2 '{'
Error              72,  2,  3 'name'
Indicator          76,  2,  7 ':'
WhiteSpace         77,  2,  8 ' '
Error              78,  2,  9 ''otherApplication2''
Indicator          97,  2, 28 ','
WhiteSpace         98,  2, 29 ' '
Error              99,  2, 30 'domain'
Indicator         105,  2, 36 ':'
WhiteSpace        106,  2, 37 ' '
Error             107,  2, 38 ''myDomain2''
Indicator         118,  2, 49 ','
WhiteSpace        119,  2, 50 ' '
Error             120,  2, 51 'state'
Indicator         125,  2, 56 ':'
WhiteSpace        126,  2, 57 ' '
Error             127,  2, 58 ''STARTED''
EndMapping        136,  2, 67 '}'
EndSequence       137,  2, 68 ']'